[package]
name = "mct"
version = "0.1.0"
authors = ["Loïc Girault <lgirault@mediarithmics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.14", features = ["event-stream"] }
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
failure = "0.1"
#futures = { version = "0.3", optional = true }
#tokio = { version = "0.2", features = ["full"] }

[patch.crates-io]
tui = { path = "../tui-rs" }
