[package]
name = "mudnet"
version = "0.1.0"
authors = ["Loïc Girault <loic.girault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telnet = "0.1"
bitflags = "1.2.1"
log = "0.4"
im = "14.2"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

[patch.crates-io]
telnet = { path = "../../telnet-rs" }
